<resources>
    <string name="app_name">Ui Android Projects</string>

    <!-- Uso Geral    -->
    <string name="cadastre_se">Cadastre-se</string>
    <string name="cadastro">Cadastro</string>
    <string name="login">Login</string>
    <string name="nome_usuario">Nome de Usuário</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="possui_conta">Já Possui Uma Conta? Faça o Login</string>
    <string name="nao_possui_conta">Não Possui Uma Conta? Cadastre-se</string>
    <string name="esqueceu_senha">Esqueceu a Senha?</string>
    <string name="recuperar_senha">Não se lembra da senha? Recuperar</string>
    <string name="contate_suporte">Contate o Suporte</string>

    <!-- UI 1 - King Cookie   -->
    <string name="app_king_cookie">King Cookie</string>
    <string name="txt_titulo_king_cookie">King Cookie Shop</string>
    <string name="txt_entrega_rapida">Entrega Rápida</string>
    <string name="dsp_logo_king_cookie">Logotipo de um cookie com coroa de rei, um rosto feliz, braços e pernas. Tipografia abaixo escrito King Cookie</string>

    <!-- UI 2 - Bk Food    -->
    <string name="app_bk_food">Bk Food</string>
    <string name="dsp_logo_bk_food">Logo do Burger King - São duas fatias de pão e entre elas os dizeres em vermelhor Burger King</string>
    <string name="dsp_fundo_topo_bk_food">Fundo no tom verde, com predios aos fundos na cor verde mais escura criando uma especie de sombra</string>
    <string name="titulo_bk_food">BK Shoop</string>

    <!-- UI 3 - Login e Cadastro    -->
    <string name="dsp_fundo_baixo_ui_3">Linhas curva com duas variações de cores - branco e cinza</string>
    <string name="dsp_logo_ui_3">Logo circular com a os dizeres: sua logo aqui</string>

    <!-- UI 4 - Login    -->
    <string name="dsp_logo_ui_4">Logo circular com a os dizeres: sua logo aqui</string>
    <string name="txt_titulo_ui_4">Smart Home</string>

    <!-- UI 5 - Dashboard    -->
    <string name="txt_titulo_ui_5">Menu App</string>
    <string name="txt_hamburguer">Hamburguer</string>
    <string name="txt_cachorro_quente">Cachorro Quente</string>
    <string name="txt_pizza">Pizza</string>
    <string name="txt_pipoca">Pipoca</string>
    <string name="txt_sorvete">Sorvete</string>
    <string name="txt_frutas">Frutas</string>
    <string name="txt_donuts">Donuts</string>
    <string name="txt_torta">Torta</string>

    <!-- UI 6 - Dashboard -->
    <string name="txt_titulo_ui_6">Dashboard Menu</string>
    <string name="dsp_img_topo_ui_6">Imagem de fundo: Tres Circulos preenchidos com as cores amarelo, e dois tons de azul</string>
    <string name="txt_subtitulo_ui_6">Seu Subtitulo...</string>
    <string name="txt_pesquisa">Pesquise...</string>
    <string name="txt_ligacao">Ligação</string>
    <string name="txt_redes">Redes</string>
    <string name="txt_conectividade">Conectividade</string>
    <string name="txt_conexao">Conexão</string>
    <string name="txt_internet">Internet</string>
    <string name="txt_acesso">Acesso</string>

    <!-- UI 7 - Login -->
    <string name="txt_titulo_ui_7">Olá...</string>
    <string name="txt_subtitulo_ui_7">Bem-Vindo ao Social App</string>
    <string name="txt_app_name_ui_7">Social App</string>

    <!-- UI 8 - Login e Cadastro -->

    <!-- UI 9 - Login -->
    <string name="txt_divisao_ou">OU</string>

    <!-- UI 10 - Dashboard -->
    <string name="txt_bemvindo_app">Bem-Vindo ao Menu App</string>
    <string name="txt_compra">Compras</string>
    <string name="txt_inbox">Inbox</string>
    <string name="txt_mapa">Mapa</string>
    <string name="txt_grafico">Grafico</string>
    <string name="txt_dinheiro">Dinheiro</string>
    <string name="txt_pesquisar">Pesquisa</string>
    <string name="txt_configuracao">Config</string>
    <string name="txt_duvida">Dúvidas</string>

    <!-- UI 11 - Dashboard -->
    <string name="txt_nome_usuario_ui_11">Ana Moraes</string>
    <string name="txt_categoria">Categoria</string>
    <string name="txt_novidades">Novidades</string>
    <string name="txt_notas">Notas</string>
    <string name="txt_tutotial">Tutorial</string>
    <string name="txt_mensagem">Mensagem</string>
    <string name="txt_calendario">Calendario</string>
    <string name="txt_dicas">Dicas</string>
    <string name="txt_tradutor">Tradutor</string>

</resources>